--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^1.0.7
   json_annotation: ^4.8.1
   liquid_pull_to_refresh: ^3.0.1
+  awesome_dialog: ^3.2.0
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
