--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   awesome_dialog: ^3.2.0
   awesome_snackbar_content: ^0.1.3
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
